Fixed horizontal scrollbar on large visualizations (#122 #192)
* Doc navigation improved.

* Angular 12 update and dependencies

* Refactoring API code

* Removing commeneted line

* code smells

* code smells

* Horizontal scroll issue solved for Vis

--- a/projects/v2/src/app/modules/tree/tree.component.scss
+++ b/projects/v2/src/app/modules/tree/tree.component.scss
@@ -6,3 +6,8 @@
   font-weight: 600;
   display: inline-block;
 }
+
+.scroll-bar-horizontal {
+  overflow: scroll;
+  height: calc(100vh - 4rem);
+};
